fix: icon in site navigation on safari

--- a/src/assets/styles/components/_components.sitenav.css
+++ b/src/assets/styles/components/_components.sitenav.css
@@ -106,6 +106,11 @@
   height: 1.5em;
   cursor: pointer;
 
+  & > svg {
+    display: inline-block;
+    overflow: visible;
+  }
+
   &::after {
     content: "";
     position: absolute;
